--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "console.table": "^0.10.0",
     "defaults": "^1.0.4",
     "denque": "^2.1.0",
+    "dotenv": "^16.0.3",
     "easy-table": "^1.1.0",
     "emoji-regex": "^8.0.0",
     "escape-string-regexp": "^1.0.5",
